Fix unaligned bullet points in list
This is because tailwind removes the default styling

--- a/src/styles/Print.css
+++ b/src/styles/Print.css
@@ -1,4 +1,9 @@
 /* bulleted */
+.print ul {
+    display: block;
+    padding-inline-start: 1.75rem;
+}
+
 .print li {
-    list-style: inside;
+    list-style: disc;
 }
